# backend/schemas/openapi.json
@@ -764,256 +764,6 @@
         }
       }
     },
-    "/agentic/search": {
-      "get": {
-        "tags": [
-          "agentic"
-        ],
-        "summary": "Agentic Search",
-        "operationId": "agentic_search_agentic_search_get",
-        "parameters": [
-          {
-            "name": "search_type",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/SearchType"
-            }
-          },
-          {
-            "name": "query",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Query"
-            }
-          },
-          {
-            "name": "week_id",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string",
-                  "format": "uuid"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Week Id"
-            }
-          },
-          {
-            "name": "number_of_weeks",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "default": 5,
-              "title": "Number Of Weeks"
-            }
-          },
-          {
-            "name": "start_date",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string",
-                  "format": "date-time"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Start Date"
-            }
-          },
-          {
-            "name": "end_date",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string",
-                  "format": "date-time"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "End Date"
-            }
-          },
-          {
-            "name": "user_id",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string",
-                  "format": "uuid"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "User Id"
-            }
-          },
-          {
-            "name": "team_id",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string",
-                  "format": "uuid"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Team Id"
-            }
-          },
-          {
-            "name": "collaborators",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "items": {
-                    "type": "string",
-                    "format": "uuid"
-                  }
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Collaborators"
-            }
-          },
-          {
-            "name": "missed_deadlines_range",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "prefixItems": [
-                    {
-                      "type": "integer"
-                    },
-                    {
-                      "type": "integer"
-                    }
-                  ],
-                  "minItems": 2,
-                  "maxItems": 2
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Missed Deadlines Range"
-            }
-          },
-          {
-            "name": "completed_task_range",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "prefixItems": [
-                    {
-                      "type": "integer"
-                    },
-                    {
-                      "type": "integer"
-                    }
-                  ],
-                  "minItems": 2,
-                  "maxItems": 2
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Completed Task Range"
-            }
-          },
-          {
-            "name": "points_range",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "array",
-                  "prefixItems": [
-                    {
-                      "type": "integer"
-                    },
-                    {
-                      "type": "integer"
-                    }
-                  ],
-                  "minItems": 2,
-                  "maxItems": 2
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Points Range"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SearchResponse"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/health": {
       "get": {
         "summary": "Health Check",
@@ -1136,41 +886,6 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
-      },
-      "SearchResponse": {
-        "properties": {
-          "reply": {
-            "type": "string",
-            "title": "Reply"
-          },
-          "weeks": {
-            "items": {
-              "$ref": "#/components/schemas/week"
-            },
-            "type": "array",
-            "title": "Weeks"
-          },
-          "total_count": {
-            "type": "integer",
-            "title": "Total Count"
-          }
-        },
-        "type": "object",
-        "required": [
-          "reply",
-          "weeks",
-          "total_count"
-        ],
-        "title": "SearchResponse"
-      },
-      "SearchType": {
-        "type": "string",
-        "enum": [
-          "regular",
-          "semantic",
-          "compare"
-        ],
-        "title": "SearchType"
       },
       "TaskFocus": {
         "type": "string",
